--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
-	<title>ManePlace</title>
+	<title>Mare Place</title>
 </head>
+
 <body>
 	<div id="main">
 		<canvas id="canvas"></canvas>
@@ -62,7 +64,10 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="credits" class="merc white button" onclick="openGitHubRepo()">
+		<div class="action fs-m"><b>Credits</b></div>
+		<div class="info fs-s">GitHub Repo</div>
+	</div>
 	<div id="loading-screen">
 		<img src="./images/dance.gif">
 		<div><b>Loading...</b></div>
@@ -72,4 +77,5 @@
 	<script src="./lib/panzoom_modified.js"></script>
 	<script src="./script.js"></script>
 </body>
+
 </html>
