--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/howler@2.2.3/dist/howler.min.js"></script>
 	<script src="./lib/panzoom_modified.js"></script>
 	<script src="./script.js"></script>
+	<script>
+		function openGitHubRepo() {
+			window.open('https://github.com/Manechat/place.manechat.net', '_blank');
+		}
+	</script>
 </body>
 
 </html>
