--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div id="ui">
-		<div style="display: flex; justify-content: center;">
+		<div style="display: flex; justify-content: left;">
 			<div id="share" class="white button" onpointerup="shareUrl()">
 				<img src="./images/arrow.svg" width="32px" height="32px">
 			</div>
