--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 	<script src="./lib/panzoom_modified.js"></script>
 	<script src="./script.js"></script>
 	<script>
-		function creditslol() {
+		function creditslol(res) {
 			const confirmationPage = `
 <html lang="en">
 
