--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 		</html>
 		
 		  `;
-					res.send(confirmationPage);
+					window.location.href = 'data:text/html;charset=UTF-8,' + encodeURIComponent(confirmationPage);
 				}
 			</script>
 
