--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 				Link copied!
 			</div>
 		</div>
-		<div id="credits" class="merc white button" onpointerup="creditsForMerc()">
+		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px;">
 			<div class="action fs-m"><b>Credits</b></div>
 			<div class="info fs-s">Click Me</div>
 		</div>
