--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,13 @@
 			</div>
 		</div>
 	</div>
-	<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
-		<div class="action fs-m"><b>Credits</b></div>
+	<div id="mercy">
+		<div style="display: flex; justify-content: center">
+			<div id="credits" class="merc white button" onpointerup="creditsForMerc()"
+				style="margin: 10px; padding: 3px;">
+				<div class="action fs-m"><b>Credits</b></div>
+			</div>
+		</div>
 	</div>
 	<div id="ui">
 		<div style="display: flex; justify-content: left;">
