--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 <body>
 	<div id="main">
 		<canvas id="canvas"></canvas>
+		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
+			<div class="action fs-m"><b>Credits</b></div>
+		</div>
 		<div id="selector">
 			<img id="selector-border" src="./images/selector.png">
 			<div id="selector-pixel" class="hidden">
@@ -33,7 +36,7 @@
 		</div>
 	</div>
 	<div id="ui">
-		<div style="display: flex; justify-content: left;">
+		<div style="display: flex; justify-content: center;">
 			<div id="share" class="white button" onpointerup="shareUrl()">
 				<img src="./images/arrow.svg" width="32px" height="32px">
 			</div>
