--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
 	</div>
 	<div id="mercy">
 		<div style="display: flex; justify-content: center">
-			<div id="credits" class="merc white button" onpointerup="creditsForMerc()"
-				style="margin: 10px; padding: 3px;">
+			<div id="credits" class="blue button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
 				<div class="action fs-m"><b>Credits</b></div>
 			</div>
 		</div>
