--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,17 @@
 			</div>
 		</div>
 	</div>
+	<div id="minimap">
+		<script>
+			const minimapContainer = document.getElementById("minimap");
+
+			const minimapDiv = document.createElement("div");
+
+			minimapDiv.innerHTML = htmlBlock;
+
+			minimapContainer.appendChild(minimapDiv);
+		</script>
+	</div>
 	<div id="mercy">
 		<div style="display: flex; justify-content: center">
 			<div id="credits" class="blue button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
@@ -79,6 +90,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/howler@2.2.3/dist/howler.min.js"></script>
 	<script src="./lib/panzoom_modified.js"></script>
 	<script src="./script.js"></script>
+	<script src="./minimap.js"></script>
 </body>
 
 </html>
