--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 	</div>
 	<div id="mercy">
 		<div style="display: flex; justify-content: center">
-			<div id="credits" class="blue button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
+			<div id="credits" class="merc white button" onpointerup="creditsForMerc()"
+				style="margin: 10px; padding: 3px;">
 				<div class="action fs-m"><b>Credits</b></div>
 			</div>
 		</div>
@@ -44,6 +45,9 @@
 		<div id="place" class="orange button" onpointerup="openPicker()">
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
+		</div>
+		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
+			<div class="action fs-m"><b>Credits</b></div>
 		</div>
 		<div id="settings" class="hidden white button">
 			<img src="./images/dots.svg" width="20px" height="20px">
