--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
 		</div>
-		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
+		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px;">
 			<div class="action fs-m"><b>Credits</b></div>
 		</div>
 		<div id="settings" class="hidden white button">
