--- a/public/index.html
+++ b/public/index.html
@@ -29,19 +29,18 @@
 			<div id="share" class="white button" onpointerup="shareUrl()">
 				<img src="./images/arrow.svg" width="32px" height="32px">
 			</div>
+		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px;">
+			<div class="action fs-m"><b>Credits</b></div>
+		</div>
 			<div id="share-tooltip" class="tooltip fs-s">
 				Link copied!
 			</div>
 		</div>
-
 		<div id="place" class="orange button" onpointerup="openPicker()">
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
 		</div>
-		<div id="credits" class="merc white button" onpointerup="creditsForMerc()" style="margin: 10px;">
-			<div class="action fs-m"><b>Credits</b></div>
-		</div>
-		<div id="settings" class="hidden white button">
+		<div id="settings" class="white button">
 			<img src="./images/dots.svg" width="20px" height="20px">
 		</div>
 	</div>
