--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
 		</div>
-		<div id="settings" class="white button">
+		<div id="settings" class="hidden white button">
 			<img src="./images/dots.svg" width="20px" height="20px">
 		</div>
 	</div>
