--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,16 @@
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
 		</div>
+		
+		<div style="display: flex; justify-content: center;">
+			<div id="share" class="white button" onpointerup="shareUrl()">
+				<img src="./images/arrow.svg" width="32px" height="32px">
+			</div>
+			<div id="share-tooltip" class="tooltip fs-s">
+					Link copied!
+			</div>
+		</div>
+		
 		<div id="settings" class="hidden white button">
 			<img src="./images/dots.svg" width="20px" height="20px">
 		</div>
