--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 			<div id="credits" class="mercy white button" onpointerup="creditsForMerc()" style="margin: 10px; padding: 3px;">
 			<div class="action fs-m"><b>Credits</b></div>
 		</div>
-		<div id="place" class="orange button" onpointerup="openPicker()">
+		<div id="place" class="orange button" onpointerup="openPicker()" style="padding: 3px;>
 			<div class="action fs-m"><b>Place!</b></div>
 			<div class="info fs-s">(500, 500) 1X</div>
 		</div>
