--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div id="ui">
 			<div id="credits" class="mercy white button" onpointerup="creditsForMerc()" style="margin: 10px;">
-			<div class="action fs-m"><b>Credits</b></div>
+			<div class="action fs-m"><b>C</b></div>
 		</div>
 		<div id="place" class="orange button" onpointerup="openPicker()">
 			<div class="action fs-m"><b>Place!</b></div>
