--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 				<div id="pixel-border"></div>
 				<div id="pixel-color"></div>
 			</div>
-			<div style="display: flex; justify-content: center; padding: 9px;">
+			<div style="display: flex; justify-content: center;">
 				<div id="placer-tooltip" class="tooltip fs-s">
 					u/mercurial
 				</div>
