Adding User Count

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,14 @@
 		</div>
 	</div>
 	<div id="ui">
-		<div style="display: flex; justify-content: center; padding: 3px;">
+		<div id="stats">
+			<div class="clients" style="padding: 10px;">
+				<div id="usercount" class="white field" style="padding: 10px;">
+					<div class="info fs-s">Fetching usercount...</div>
+				</div>
+			</div>
+		</div>
+		<div style="display: flex; justify-content: center; padding: 10px;">
 			<div id="credits" class="mercy white button" onpointerup="creditsForMerc()">
 				<img src="./images/github-mark.svg" width="42px" height="42px">
 
@@ -96,6 +103,8 @@
 
 		</div>
 	</div>
+
+
 
 	<div id="loading-screen">
 		<img src="./images/dance.gif">
