--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 	<div id="stats">
 		<div class="clients" style="padding: 10px;">
 			<div id="usercount" class="white field" style="padding: 10px;">
+				<img src="./images/User_online.svg" width="8px" height="8px">
 				<div class="info fs-s">Fetching usercount...</div>
 			</div>
 		</div>
