--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<div class="clients" style="padding: 10px;">
 			<div id="usercount" class="white field" style="padding: 10px;">
 				<img src="./images/User_online.svg" width="32px" height="32px">
-				<div class="info fs-s">Fetching usercount...</div>
+				<div id="displayusers" class="info fs-s">Fetching usercount...</div>
 			</div>
 		</div>
 	</div>
