--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 	<div id="stats">
 		<div class="clients" style="padding: 10px;">
 			<div id="usercount" class="white field" style="padding: 10px;">
-				<img src="./images/User_online.svg" width="32px" height="32px">
-				<div id="displayusers" class="info fs-s">Fetching usercount...</div>
+				<img src="./images/User_online.svg" width="16px" height="16px">
+				<span id="displayusers" class="info fs-s">Fetching usercount...</span>
 			</div>
 		</div>
 	</div>
