--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 			<div id="cancel" class="button" onpointerup="closePaint()">
 				<img src="./images/x.svg" width="40px" height="40px">
 			</div>
-			<div id="confirm" class="inactive orange button" onpointerup="adminPlace()">
+			<div id="confirm" class="inactive orange button" onpointerup="handleSelect()">
 				<img src="./images/checkmark.svg" width="40px" height="40px">
 			</div>
 
