changed users online overlay and add automatic protocol selection

--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -25,12 +25,15 @@
 		</div>
 	</div>
 	<div id="stats">
+
 		<div class="clients" style="padding: 10px;">
-			<div id="usercount" class="white field" style="padding: 10px;">
-				<img src="./images/User_online.svg" width="32px" height="32px">
+			<div id="usercount" class="white field" style="padding: 10px; display: inline-block;">
+				<img src="./images/User_online.svg" width="24px" height="24px">
 				<span id="displayusers" class="info fs-s">Fetching usercount...</span>
 			</div>
 		</div>
+		
+
 	</div>
 	<div id="modUi">
 		<div class="mod" style="padding: 10px;">
