--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -4,18 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
-	<title>Mare Place</title>
+	<title>ManePlace</title>
 </head>
 
 <body>
 	<div id="main">
 		<canvas id="canvas"></canvas>
 		<div id="selector">
-			<img id="selector-border" src="./images/selector.png">
-			<div id="selector-pixel" class="hidden">
-				<div id="pixel-border"></div>
-				<div id="pixel-color"></div>
+			<div id="selector-container">
+				<img id="selector-border" src="./images/selector.png">
+				<div id="selector-pixel" class="hidden">
+					<div id="pixel-border"></div>
+					<div id="pixel-color"></div>
+				</div>
 			</div>
 			<div style="display: flex; justify-content: center;">
 				<div id="placer-tooltip" class="tooltip fs-s">
@@ -23,17 +26,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div id="stats">
-
-		<div class="clients" style="padding: 10px;">
-			<div id="usercount" class="white field" style="padding: 10px; display: inline-block;">
-				<img src="./images/User_online.svg" width="24px" height="24px">
-				<span id="displayusers" class="info fs-s">Fetching usercount...</span>
-			</div>
-		</div>
-		
-
 	</div>
 	<div id="modUi">
 		<div class="mod" style="padding: 10px;">
@@ -49,31 +41,23 @@
 			</div>
 		</div>
 	</div>
-
 	<div id="ui">
-		<div style="display: flex; justify-content: center; padding: 10px;">
-			<div id="credits" class="mercy white button" onpointerup="creditsForMerc()">
-				<img src="./images/github-mark.svg" width="42px" height="42px">
-
-			</div>
-		</div>
-
-		<div id="place" class="orange button" onpointerup="openPicker()">
-			<div class="action fs-m"><b>Place!</b></div>
-			<div class="info fs-s">(500, 500) 1X</div>
-		</div>
-
-		<div style="display: flex; justify-content: center; padding: 3px;">
-			<div id="share" class="white button" onpointerup="shareUrl()">
+		<div style="display: flex; justify-content: center;">
+			<div id="share" class="white shadow button" onpointerup="shareUrl()">
 				<img src="./images/arrow.svg" width="32px" height="32px">
 			</div>
 			<div id="share-tooltip" class="tooltip fs-s">
 				Link copied!
 			</div>
-
 		</div>
 
-	</div>
+		<div id="place" class="orange shadow button" onpointerup="openPicker()">
+			<div class="action fs-m"><b>Place!</b></div>
+			<div class="info fs-s">(500, 500) 1X</div>
+		</div>
+		<div id="settings" class="white shadow button" onpointerup="openExtra()">
+			<img src="./images/dots.svg" width="20px" height="20px">
+		</div>
 	</div>
 	<div id="paint">
 		<div class="container">
@@ -96,7 +80,6 @@
 
 		</div>
 	</div>
-
 	<div id="picker">
 		<div class="container">
 			<div id="colors">
@@ -109,27 +92,36 @@
 			</div>
 		</div>
 		<div class="container">
-			<div id="cancel" class="button" onpointerup="closePicker()">
+			<div id="cancel" class="gray shadow button" onpointerup="closePicker()">
 				<img src="./images/x.svg" width="40px" height="40px">
 			</div>
-			<div id="confirm" class="inactive orange button" onpointerup="placeColor()">
+			<div id="confirm" class="inactive orange shadow button" onpointerup="placeColor()">
 				<img src="./images/checkmark.svg" width="40px" height="40px">
 			</div>
-
 		</div>
 	</div>
 
-
-
-	<div id="minimapui" class="minimapui open">
-		<img class="map">
-		<div class="crosshair"></div>
-		<div class="settings"></div>
+	<div id="extra-screen" class="hidden" onpointerup="closeExtra(true)">
+		<div class="white shadow modal" onpointerup="noop(event)">
+			<div id="close-extra" class="white button" onpointerup="closeExtra()">
+				<img src="./images/x.svg" width="40px" height="40px">
+			</div>
+			<div class="modal-content fs-l">
+				<div class="gray modal-option button" onpointerup="openGithub()">
+					<img src="./images/github.svg" width="30px" height="30px">
+					<b>Credits + Minimap</b>
+				</div>
+				<div class="gray modal-option button" onpointerup="openManechat()">
+					<img src="./images/discord.svg" width="30px" height="30px">
+					<b>Join r/place Bronies!</b>
+				</div>
+				<div class="gray modal-option button" onpointerup="openStats()">
+					<img src="./images/stats.svg" width="30px" height="30px">
+					<b>Stats</b>
+				</div>
+			</div>
+		</div>
 	</div>
-
-
-
-
 
 	<div id="loading-screen">
 		<img src="./images/dance.gif">
