Confirm Button Fix

--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -59,27 +59,6 @@
 			<img src="./images/dots.svg" width="20px" height="20px">
 		</div>
 	</div>
-	<div id="paint">
-		<div class="container">
-			<div id="adminColors">
-				<div class="adminColor" style="background-color: red;" onpointerup="pickColor(this)"></div>
-				<div class="adminColor" style="background-color: orangered;" onpointerup="pickColor(this)"></div>
-				<div class="adminColor" style="background-color: orange;" onpointerup="pickColor(this)"></div>
-				<div class="adminColor" style="background-color: yellow;" onpointerup="pickColor(this)"></div>
-				<div class="adminColor" style="background-color: blue;" onpointerup="pickColor(this)"></div>
-				<div class="adminColor" style="background-color: green;" onpointerup="pickColor(this)"></div>
-			</div>
-		</div>
-		<div class="container">
-			<div id="cancel" class="button" onpointerup="closePaint()">
-				<img src="./images/x.svg" width="40px" height="40px">
-			</div>
-			<div id="confirm" class="inactive orange button" onpointerup="handleSelect()">
-				<img src="./images/checkmark.svg" width="40px" height="40px">
-			</div>
-
-		</div>
-	</div>
 	<div id="picker">
 		<div class="container">
 			<div id="colors">
@@ -98,6 +77,27 @@
 			<div id="confirm" class="inactive orange shadow button" onpointerup="placeColor()">
 				<img src="./images/checkmark.svg" width="40px" height="40px">
 			</div>
+		</div>
+	</div>
+	<div id="paint">
+		<div class="container">
+			<div id="adminColors">
+				<div class="adminColor" style="background-color: red;" onpointerup="pickColor(this)"></div>
+				<div class="adminColor" style="background-color: orangered;" onpointerup="pickColor(this)"></div>
+				<div class="adminColor" style="background-color: orange;" onpointerup="pickColor(this)"></div>
+				<div class="adminColor" style="background-color: yellow;" onpointerup="pickColor(this)"></div>
+				<div class="adminColor" style="background-color: blue;" onpointerup="pickColor(this)"></div>
+				<div class="adminColor" style="background-color: green;" onpointerup="pickColor(this)"></div>
+			</div>
+		</div>
+		<div class="container">
+			<div id="cancel" class="button" onpointerup="closePaint()">
+				<img src="./images/x.svg" width="40px" height="40px">
+			</div>
+			<div id="confirmm" class="inactive orange button" onpointerup="handleSelect()">
+				<img src="./images/checkmark.svg" width="40px" height="40px">
+			</div>
+
 		</div>
 	</div>
 
