--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -64,6 +64,12 @@
 					<canvas id="colors-chart"></canvas>
 				</div>
 			</div>
+			<div class="fs-m b">Top 20 Pixel Placer</div>
+			<div class="even-columns">
+				<div class="large panel">
+					<canvas id="topPlacer-chart"></canvas>
+				</div>
+			</div>
 
 			<div class="even-columns">
 				<div class="small panel">
