--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -74,7 +74,7 @@
 			<div id="cancel" class="gray shadow button" onpointerup="closePicker()">
 				<img src="./images/x.svg" width="40px" height="40px">
 			</div>
-			<div id="confirm" class="inactive orange shadow button" onpointerup="placeColor()">
+			<div id="confirm" class="inactive green shadow button" onpointerup="placeColor()">
 				<img src="./images/checkmark.svg" width="40px" height="40px">
 			</div>
 		</div>
