Top Placer Of Current Day Chart

--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -70,11 +70,17 @@
 					<canvas id="topPlacer-chart"></canvas>
 				</div>
 			</div>
+			<div class="fs-m b">Top 30 Pixel Placer if this day</div>
+			<div class="even-columns">
+				<div class="large panel">
+					<canvas id="topPlacerDay-chart"></canvas>
+				</div>
+			</div>
 
 			<div class="even-columns">
 				<div class="small panel">
 					<div class="fs-m b">Best Pony</div>
-					<p id="user-count" class="fs-l b" style="color: #b6c5ce;">Derpy</p>
+					<p id="user-count" class="fs-l b" style="color: #5222d4;">Mizkif</p>
 				</div>
 				<div></div>
 			</div>
