--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -70,7 +70,7 @@
 					<canvas id="topPlacer-chart"></canvas>
 				</div>
 			</div>
-			<div class="fs-m b">Top 30 Pixel Placer if this day</div>
+			<div class="fs-m b">Top 30 Pixel Placer of this day</div>
 			<div class="even-columns">
 				<div class="large panel">
 					<canvas id="topPlacerDay-chart"></canvas>
