--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -126,7 +126,7 @@
 				</div>
 
 				<div class="fs-m b">Your Placed Pixel Map</div>
-				<div class="even-columns, justify-content=center">
+				<div class="even-columns">
 					<div class="panel">
 						<canvas id="heatmap"></canvas>
 					</div>
